--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@nostr-dev-kit/ndk": "^2.0.3",
     "@nostr-dev-kit/ndk-cache-dexie": "^2.0.3",
     "@nostr-dev-kit/ndk-react": "^0.1.1",
+    "axios": "^1.6.2",
     "dexie": "^3.2.4",
     "dexie-react-hooks": "^1.1.7",
     "dompurify": "^3.0.6",
+    "instagram-private-api": "^1.45.3",
     "lodash": "^4.17.21",
     "next": "14.0.1",
     "nostr-hooks": "^1.8.1",
