--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-  ],
+, "app/libraries/NIP-07.jsx"  ],
   "exclude": [
     "node_modules"
   ]
