--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "dompurify": "^3.0.6",
     "instagram-private-api": "^1.45.3",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.294.0",
     "next": "14.0.1",
     "nostr-hooks": "^1.8.1",
     "nostr-tools": "^1.16.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.5",
